--- a/src/index.html
+++ b/src/index.html
@@ -8,30 +8,48 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
-    <title>Cornômetro</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;700&display=swap" rel="stylesheet">
+    <title>Cronômetro Timer42</title>
 </head>
 
 <body>
   <main class="container-box">
         <div class="content-box">
-            <h1>Cornômetro</h1>
-            <h2>Não deixe seus chifres de fora.</h2>
-            <h2>Conte-os!</h2>
+            <h1>Cronômetro</h1>
+            <h2 id="subtitle">Comece</h2>
             <div class="stopwatch">
-                <span id="minutes">00</span>
-                <span>:</span>
-                <span id="seconds">00</span>
-                <span id="miliseconds">00</span>
+                <p>
+                    <span id="minutes" class="disable">00</span>
+                    <span id="colon" class="disable">:</span>
+                    <span id="seconds">00</span>
+                    <span id="miliseconds">00</span>      
+                </p>
             </div>
+
             <div class="buttons-container">
-                <button class="btn" id="start" onclick="start()">Começar</button>
-                <button class="btn disable" id="pause" onclick="pause()">Pausar</button>
-                <button class="btn disable" id="return" onclick="returnWork()">Retornar</button>
-                <button class="btn disable" id="stop" onclick="stop()">Parar</button>
+                <button class="btn" id="start">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="play" class="svg-inline--fa fa-play fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                        <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"/>
+                    </svg>
+                </button>
+
+                <button class="btn disable" id="pause">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pause" class="svg-inline--fa fa-pause fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path  d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z" />
+                    </svg>
+                </button>
+
+                <button class="btn disable" id="return"> <!-- There is a bug with this svg. I'm working to how to use the tag i.-->
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="undo" class="svg-inline--fa fa-undo fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path  d="M212.333 224.333H12c-6.627 0-12-5.373-12-12V12C0 5.373 5.373 0 12 0h48c6.627 0 12 5.373 12 12v78.112C117.773 39.279 184.26 7.47 258.175 8.007c136.906.994 246.448 111.623 246.157 248.532C504.041 393.258 393.12 504 256.333 504c-64.089 0-122.496-24.313-166.51-64.215-5.099-4.622-5.334-12.554-.467-17.42l33.967-33.967c4.474-4.474 11.662-4.717 16.401-.525C170.76 415.336 211.58 432 256.333 432c97.268 0 176-78.716 176-176 0-97.267-78.716-176-176-176-58.496 0-110.28 28.476-142.274 72.333h98.274c6.627 0 12 5.373 12 12v48c0 6.627-5.373 12-12 12z" />
+                    </svg>
+                </button>
+                
+                <button class="btn disable" id="stop">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="stop" class="svg-inline--fa fa-stop fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48z"/>
+                    </svg>
+                </button>
             </div>
+            
         </div>
     </main>
     <script src="./index.js"></script>
